src/test/deca/codegen/invalid/homemade/nullDereferencementInFieldSelection_nocheck.res
0.00000e+00 ; 0 ; 0 ; 
  ** IMA ** ERREUR ** Ligne 52 : 
    Adressage indirect : la base ne contient pas une adresse
